Fixed Share to WhatsApp dropdown bug by setting accordion card CSS overflow to visible

--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -22,3 +22,7 @@
 .note-editor.note-frame {
     display: block!important;
 }
+
+.accordion>.card {
+    overflow: visible;
+}
